[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/Enemies/Enemy-01.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy-01.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/SFX/Retro Gun Laser SingleShot 01.wav" type="AudioStream" id=3]

[node name="Enemy-01" type="Area2D" groups=[
"enemies",
]]
script = ExtResource( 2 )
verticalSpeed = 60
health = 3

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -1, 15, 1, 15, 3, 13, 4, 11, 7, 6, 9, 6, 16, -1, 16, -8, 8, -15, -8, -15, -16, -8, -16, -1, -9, 6, -7, 6, -4, 11, -3, 13 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 7.15256e-07, 7 )
scale = Vector2( 1.6, 0.7 )

[node name="Gun" type="Node2D" parent="."]
position = Vector2( 0, 15 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Enemy_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
